--- a/style.css
+++ b/style.css
@@ -1,3 +1,76 @@
+.full_wrapper {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
 
+.inner_wrapper {
+  max-width: 1440px;
+  height: 900px;
+  display: flex;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  background: #FFFFFF;
+}
+
+.header {
+  display: flex;
+  position: absolute;
+  flex-wrap: nowrap;
+  width: 100%;
+  height: 48px;
+  justify-content: space-between;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24), 0px 0px 4px rgba(0, 0, 0, 0.12);
+}
+.header--navbar {
+  height: 100%;
+  width: 40%;
+  display: block;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+}
+.header--navbar--list {
+  width: 100%;
+  list-style: none;
+}
+.header--navbar--list--item {
+  width: 100%;
+  border-right: none;
+}
+.header--navbar--list--item a {
+  display: block;
+  width: 80%;
+  background: #131212;
+  padding: 4% 10%;
+  font-size: 19px;
+  text-decoration: none;
+}
+.header #menu {
+  width: 1.6%;
+  display: block;
+  background: #dddddd;
+  font-size: 19px;
+  text-align: center;
+}
+.header #first-navbar.js {
+  display: none;
+}
+.header--logo {
+  display: block;
+  width: 18.75%;
+  height: 100%;
+  position: relative;
+  margin-left: 10%;
+}
+.header--logo h1 {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  color: rgba(0, 0, 0, 0.87);
+}
 
 /*# sourceMappingURL=style.css.map */
