--- a/style.scss
+++ b/style.scss
@@ -85,6 +85,7 @@
     position: relative;
 
     li {
+        height: 48px;
         font-family: Roboto;
         font-style: normal;
         font-weight: normal;
@@ -92,8 +93,60 @@
         line-height: 24px;
         display: flex;
         align-items: center;
-        color: rgba(0, 0, 0, 0.541327);
 
+        a {
+            text-decoration: none;
+            color: rgba(0, 0, 0, 0.541327);
+        }
+    }
+    li:before {
+        content: '';
+        display: inline-block;
+        height: 1em;
+        width: 1em;
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-right:0.5em;
+    }
+    .bucket:before {
+        content: '';
+        background-image: url(./assets/images/bucket-icon.svg);
+    }
+    .choose:before {
+        content: '';
+        background-image: url(./assets/images/choose-icon.svg);
+    }
+    .move:before {
+        content: '';
+        background-image: url(./assets/images/move-icon.svg);   
+    }
+    .transform:before {
+        content: '';
+        background-image: url(./assets/images/transform-icon.svg);
+    }
+    .current:before {
+        content: '';
+        border-radius: 50%;
+        border: 1px solid rgb(2, 2, 2);
+        background-color: rgb(134, 133, 133);
+    }
+    .prev:before {
+        content: '';
+        border-radius: 50%;
+        border: 1px solid rgb(2, 2, 2);
+        background-color: rgb(149, 235, 93);
+    }
+    .red:before {
+        content: '';
+        border-radius: 50%;
+        border: 1px solid rgb(2, 2, 2);
+        background-color: rgb(235, 30, 30);
+    }
+    .blue:before {
+        content: '';
+        border-radius: 50%;
+        border: 1px solid rgb(2, 2, 2);
+        background-color: rgb(56, 196, 221);
     }
 }
 .instrument_type {
@@ -116,17 +169,28 @@
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24), 0px 0px 4px rgba(0, 0, 0, 0.12);
 }
+.image_changer {
+    display: block;
+    position: absolute;
+    height: 185px;
+    width: 228px;
+    margin-top: 127px;
+    margin-right: 29px;
+    margin-left: 1183px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24), 0px 0px 4px rgba(0, 0, 0, 0.12);
+}
 #switcher {
     background-color: gray;
-  }
+}
   
 .canvas {
     height: 512px;
     width: 512px;
     position: absolute;
-    margin-top: 121px;
+    margin-top: 127px;
     margin-left: 520px;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-  }
+}
